fixed weird page layout bug that caused a horizontal scroll wheel to appear, added form and changePassword request handler on front end

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -69,7 +69,7 @@ html {
   --transition: 0.3s ease-in-out all;
   --max-width: 1120px;
   --fixed-width: 600px;
-  --fluid-width: 90vw;
+  --fluid-width: 90%;
   --nav-height-1: 100px;
   --nav-height-2: 60px;
   --sidebar-width-1: 150px;
@@ -153,7 +153,7 @@ ul {
 /* base image styles */
 
 .img-container {
-  width: 40vw;
+  width: 40%;
   max-width: var(--max-width);
 }
 
@@ -221,7 +221,7 @@ ul {
 /* form */
 
 .form {
-  width: 90vw;
+  width: 90%;
   max-width: var(--fixed-width);
   background: var(--gray-200);
   border-radius: var(--borderRadius-2);
